# NSKsim

./: .gitignore  LICENSE  NSK_Project_Report.docx  README.md  TECHNICAL.md  requirements.txt
.github/workflows/: ci.yml
experiments/designs/: EXP-01_fragmentation_vs_swarm_size.md
experiments/nav/: nav2_robot0.yaml  slam_robot0.yaml
ros2_ws/: README_GAZEBO.md  test_integration.py
ros2_ws/src/nsk_swarm/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/nsk_swarm/config/: nsk_swarm_params.yaml
ros2_ws/src/nsk_swarm/launch/: explore.launch.py  swarm_sim.launch.py
ros2_ws/src/nsk_swarm/nsk_engine/: agent_manager.py  engine_server.py
ros2_ws/src/nsk_swarm/nsk_swarm/: __init__.py  convergence_monitor.py  frontier_explorer.py  graph_serialiser.py  robot_node.py
ros2_ws/src/nsk_swarm/rviz/: nsk_convergence.rviz
ros2_ws/src/nsk_swarm/test/: conftest.py  test_client_engine_roundtrip.py  test_convergence_logic.py  test_csv_export.py  test_engine_lifecycle.py  test_geometry.py  test_graph_serialiser.py  test_retention.py  test_share_adaptivity.py  test_spawn_offsets.py  test_stuck_escape.py
ros2_ws/src/nsk_swarm/worlds/: knowledge_world.sdf
ros2_ws/src/nsk_swarm_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/nsk_swarm_interfaces/srv/: Compress.srv  Merge.srv  SimilarityQuery.srv
