<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nsk_swarm</name>
  <version>0.1.0</version>
  <description>
    NSK Swarm Robotics 2D Simulation — ROS 2 Jazzy + Gazebo Harmonic.
    Five differential-drive robots sharing compressed knowledge graphs
    over ZMQ. NSK inference runs in a separate nsk_env process.
  </description>
  <maintainer email="aliyossefalhasan@gmail.com">Ali Alhasan</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <exec_depend>nsk_swarm_interfaces</exec_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>ros_gz_bridge</depend>
  <depend>rviz2</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
